# unstructured-client

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
crates/unstructured-cli/: Cargo.toml  README.md
crates/unstructured-cli/src/: args.rs  error.rs  main.rs
crates/unstructured-client/: Cargo.toml  README.md
crates/unstructured-client/src/: client.rs  element.rs  error.rs  lib.rs  metadata.rs  partition.rs
examples/: simple.rs
