[package]
name = "unstructured-cli"
version = { workspace = true }
license = { workspace = true }
edition = "2021"
exclude = ["tests/fixtures/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unstructured-client = { path = "../unstructured-client"}
thiserror = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1.0.86"
reqwest = "0.12.5"
serde_json = "1.0.120"
