[package]
name = "unstructured-client"
license = { workspace = true }
version = { workspace = true }
edition = "2021"
description = "Unofficial Unstructured Rust client library"
repository = "https://github.com/wdoppenberg/unstructured-client"
homepage = "https://github.com/wdoppenberg/unstructured-client"
documentation = "https://docs.rs/unstructured-client/"
readme = "README.md"
keywords = ["pdf", "documents", "client"]


[dependencies]
reqwest = { version = "0.12.5", features = ["multipart", "json"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0.86"
tracing = { workspace = true }
thiserror = { workspace = true }

[lib]
doctest = false

[dev-dependencies]
mockito = "1.4.0"
tempfile = "3.10.1"
tokio.workspace = true
